--- a/languages/ogdch-app-it_IT.po
+++ b/languages/ogdch-app-it_IT.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: jazz@liip.ch\n"
 "POT-Creation-Date: 2016-11-17 10:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Stefan Oderbolz <oderbolz@gmail.com>, 2016\n"
+"Last-Translator: Andreas Weder <Andreas.Weder@gs-edi.admin.ch>, 2016\n"
 "Language-Team: Italian (https://www.transifex.com/opendataswiss/teams/54778/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -24,7 +24,7 @@ msgstr "Applicazioni"
 
 #: post-types/app.php:35
 msgid "Application"
-msgstr "Applicazioni"
+msgstr "Applicazione"
 
 #: post-types/app.php:38
 msgid "All Applications"
